src/objects/Product_Objective__c.object
<CustomObject>
    <fields>
        <fullName>Defined_Objective__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Defined Objective</label>
        <referenceTo>FS_Defined_Objective__c</referenceTo>
        <relationshipLabel>Product Objectives</relationshipLabel>
        <relationshipName>Product_Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Value__c</fullName>
        <label>Product Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Volume__c</fullName>
        <label>Product Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Objectives</relationshipLabel>
        <relationshipName>Product_Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Objective</label>
    <nameField>
        <displayFormat>PO-{0000}</displayFormat>
        <label>Product Objective Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Objectives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>